--- a/Front-end/gn/src/App.css
+++ b/Front-end/gn/src/App.css
@@ -1,5 +1,15 @@
 .App {
   text-align: center;
+  color: #092327;
+
+  
+}
+body{
+
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 .App-logo {
@@ -12,7 +22,17 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+.background{
+  background-image: url("./assets/capa.jpeg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100vw 100vh;
+  opacity: 0.5;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  z-index: -1;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
